--- a/core.css
+++ b/core.css
@@ -10,7 +10,7 @@ The 2 items above are not owned by me, They go to there respected owners
     --background: url('https://wallpapercave.com/wp/wp6430810.jpg');
     --activetext-colour: white;
 
-    --primary1-colour: red;
+    --primary1-colour: black;
     --primary2-colour: rgba(0,0,0,0);
     --primary3-colour: rgba(0,0,0,0);
 
